can ping server with current Avatax settings, doesn't validate Company Code yet

--- a/app/views/weblinc/admin/menus/_avatax_settings.html.haml
+++ b/app/views/weblinc/admin/menus/_avatax_settings.html.haml
@@ -2,3 +2,4 @@
   %span AvaTax plug-in
   %ul.nav-menu
     %li.menu-item= link_to 'Settings', avatax_settings_url, class: 'item-node'
+    %li.menu-item= link_to 'Test Connection', avatax_test_connection_url, class: 'item-node'
