--- a/app/views/weblinc/admin/avatax_test_connections/show.html.haml
+++ b/app/views/weblinc/admin/avatax_test_connections/show.html.haml
@@ -10,7 +10,19 @@
 
       .wl-section
         %h2 Test Connection
-        %p Text Text Text
+
+        - if @connection[:errors].any?
+          - @connection[:errors].each do |message|
+            .wl-message--error
+              %p.type
+                %span Error
+              %p.message= message
+        - else
+          .wl-message--success
+            %p.type
+              %span Success
+            %p.message #{@connection[:status]}
+
         - @settings.each do |field, value|
           .wl-property
             = label_tag "settings[#{field}]", nil, class: 'name' do
@@ -20,6 +32,5 @@
 
     .wl-panel--buttons
       .wl-action-group
-        %p= link_to 'Cancel', :back, class: 'wl-text-button--muted'
         %p= link_to 'Edit Settings', avatax_settings_url, class: 'wl-text-button--muted'
-        %p= button_tag 'Test Connection', value: 'save_settings', class: 'wl-button'
+        %p= button_tag 'Refresh', value: 'save_settings', class: 'wl-button'
