--- a/app/views/weblinc/admin/avatax_settings/show.html.haml
+++ b/app/views/weblinc/admin/avatax_settings/show.html.haml
@@ -26,4 +26,5 @@
     .wl-panel--buttons
       .wl-action-group
         %p= link_to 'Cancel', :back, class: 'wl-text-button--muted'
+        %p= link_to 'Test Connections', avatax_test_connection_url, class: 'wl-text-button--muted'
         %p= button_tag 'Save Changes', value: 'save_settings', class: 'wl-button'
