wrap up of permissions, allows test connection now

--- a/app/views/weblinc/admin/users/_avatax_settings.html.haml
+++ b/app/views/weblinc/admin/users/_avatax_settings.html.haml
@@ -4,3 +4,10 @@
   %td -
   %td= check_box_tag 'permissions[avatax_settings][edit]', true, @permissions.authorized_to?(:edit, :avatax_settings), title: 'AvaTax Settings: Edit'
   %td -
+%tr
+  %th AvaTax Test Connection
+  %td= check_box_tag 'permissions[avatax_test_connections][view]', true, @permissions.authorized_to?(:view, :avatax_test_connections), title: 'AvaTax Test Connection: View'
+  %td -
+  %td= check_box_tag 'permissions[avatax_test_connections][edit]', true, @permissions.authorized_to?(:edit, :avatax_test_connections), title: 'AvaTax Test Connection: Edit'
+  %td -
+
