fix connection test error display

--- a/app/views/weblinc/admin/avatax/test_connections/show.html.haml
+++ b/app/views/weblinc/admin/avatax/test_connections/show.html.haml
@@ -11,9 +11,9 @@
       .wl-section
         %h2 Test Connection
 
-        
+
         - if @connection.errors.any?
-          - @connection[:errors].each do |message|
+          - @connection.errors.each do |message|
             .wl-message--error
               %p.type
                 %span Error
