AVATAX-16: Upgrades haml structure to match current bem architecture, other plugin fixes

--- a/app/views/layouts/avatax/application.html.erb
+++ b/app/views/layouts/avatax/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Avatax</title>
+  <title>AvaTax</title>
   <%= stylesheet_link_tag    "avatax/application", media: "all" %>
   <%= javascript_include_tag "avatax/application" %>
   <%= csrf_meta_tags %>
