--- a/app/views/weblinc/admin/avatax/settings/show.html.haml
+++ b/app/views/weblinc/admin/avatax/settings/show.html.haml
@@ -1,41 +1,45 @@
 - @title = ['AvaTax Settings']
+- @selected_navigation_nodes = ['Store', 'AvaTax plug-in', 'AvaTax Settings']
 
 .avatax-settings-view.view
 
   %h1 AvaTax Settings
 
   = form_tag avatax_settings_url, method: :patch do
-    .wl-tabs
-      .section
-        %h2 Account Info
-        %p Account Number: This is the account number that needs to be used to authenticate your API call (this is not an Admin Console login). It will be a ten-digit number (e.g. 1100012345)
-        %p License Key: This is the license key that needs to be set in the credentials portion of your connector (this is not an Admin Console Password). It will be a 16-character string (e.g. 1A2B3C4D5E6F7G8H).
-        %p Company Code: The code that identifies the company in the AvaTax account. This code is declared during the company setup in the AvaTax Admin Console.
-        - @settings_drop.each do |field, options_hash|
-          .property
-            = label_tag "settings[#{field}]", nil, class: 'name' do
-              %span.text= field.to_s.titleize
-            .value= select_tag "settings[#{field}]",
-              options_for_select(options_hash[:container],selected: options_hash[:selected])
-        - @settings_text.each do |field, value|
-          .property
-            = label_tag "settings[#{field}]", nil, class: 'name' do
-              %span.text= field.to_s.titleize
-            .value= text_field_tag "settings[#{field}]", value, class: 'text-box'
+    .section
+      %h2 Account Info
+      %p Account Number: This is the account number that needs to be used to authenticate your API call (this is not an Admin Console login). It will be a ten-digit number (e.g. 1100012345)
+      %p License Key: This is the license key that needs to be set in the credentials portion of your connector (this is not an Admin Console Password). It will be a 16-character string (e.g. 1A2B3C4D5E6F7G8H).
+      %p Company Code: The code that identifies the company in the AvaTax account. This code is declared during the company setup in the AvaTax Admin Console.
 
-        %h3 Tax Document Handling
-        %p
-          = radio_button_tag "settings[doc_handling]", :commit, @current_settings.doc_handling == :commit
-          = label_tag :settings_doc_handling_commit, "Post and Commit after checkout"
-        %p
-          = radio_button_tag "settings[doc_handling]", :post, @current_settings.doc_handling == :post
-          = label_tag :settings_doc_handling_post, "Post only after checkout"
-        %p
-          = radio_button_tag "settings[doc_handling]", :none, @current_settings.doc_handling == :none
-          = label_tag :settings_doc_handling_none, "Do nothing after checkout"
+      - @settings_drop.each do |field, options_hash|
+        .property
+          = label_tag "settings[#{field}]", nil, class: 'property__name' do
+            %span.property__text= field.to_s.titleize
+          .value= select_tag "settings[#{field}]",
+            options_for_select(options_hash[:container],selected: options_hash[:selected])
+      - @settings_text.each do |field, value|
+        .property
+          = label_tag "settings[#{field}]", nil, class: 'property__name' do
+            %span.property__text= field.to_s.titleize
+          .value= text_field_tag "settings[#{field}]", value, class: 'text-box'
 
-    .panel--buttons
+      %h3 Tax Document Handling
+      .button-property
+        .value= radio_button_tag "settings[doc_handling]", :commit, @current_settings.doc_handling == :commit
+        = label_tag :settings_doc_handling_commit, class: 'button-property__name' do
+          %span.button-property__text Post and Commit after checkout
+      .button-property
+        .value= radio_button_tag "settings[doc_handling]", :post, @current_settings.doc_handling == :post
+        = label_tag :settings_doc_handling_post, class: 'button-property__name' do
+          %span.button-property__text Post only after checkout
+      .button-property
+        .value= radio_button_tag "settings[doc_handling]", :none, @current_settings.doc_handling == :none
+        = label_tag :settings_doc_handling_none, class: 'button-property__name' do
+          %span.button-property__text Do nothing after checkout
+
+    .form-actions
       .action-group
-        %p= link_to 'Cancel', :back, class: 'text-button--muted'
-        %p= link_to 'Test Connections', avatax_test_connection_url, class: 'text-button--muted'
-        %p= button_tag 'Save Changes', value: 'save_settings', class: 'button'
+        .action-group__item= link_to 'Cancel', :back, class: 'text-button text-button--muted'
+        .action-group__item= link_to 'Test Connection', avatax_test_connection_url, class: 'button button--create'
+        .action-group__item= button_tag 'Save Changes', value: 'save_settings', class: 'button'
